# StopPayingForFreeMonads

./: .ghci.conf  ALaCarteDSL.hs  ALaCarteImpl.hs  Expressions.hs  LICENSE  README.md  Regex.hs  RegexFinal.hs  StopPayingForFreeMonads.cabal  Tagless.hs
src/: ALaCarte.hs  ALaCarteDSL.hs
